# Signal

./: .gitblameignore  .gitignore  CMakeLists.txt  CODEOWNERS  LICENSE  Makefile  README.md  gmon.out  sampleCode.pr  syntax.pr  test.cpp
other/: keywords.txt  tokenizeKeywordsGenerator.py
sampleCode/: grammar.pr  hello_world.pr  ini.pr  sampleCode.pr  sampleCode2.pr  std.pr  syntax.pr  test.pr  test1.pr
src/: bytecodeDesign.hpp  lexer.cpp  lexer.hpp  main.cpp  memPool.hpp  nodeMemPool.hpp  nodes.cpp  nodes.hpp  prettyPrint.cpp  sTest.hpp  sampleByteCode.cpp  testingMemPool.cpp  testingMemPool.hpp  token.cpp  token.hpp  utils.cpp  utils.hpp
src/bytecodeDesign/: bytecodeDesign.cpp  bytecodeDesign.hpp  test_bytecodeDesign.cpp
src/checker/: checker.cpp  checker.hpp  test_checker.cpp
src/codeGen/: bytecodeDesign.cpp  codeGen.cpp  codeGen.hpp  test_codeGen.cpp
src/codeGen/bytecode/: codeGen.cpp  codeGen.hpp  test_codeGen.cpp
src/codeGen/interpreter/: codeGen.cpp  codeGen.hpp  test_codeGen.cpp
src/compTime/: compTime.cpp  compTime.hpp  test_compTime.cpp
src/integrationTests/: helloWorld.pr  integration_tests.cpp
src/interpreter/: interpreter.cpp  interpreter.hpp  interpreterMain.cpp  test_interpreter.cpp
src/parser/: parser.cpp  parser.hpp  test_parser.cpp
src/prettyPrint/: prettyPrint.cpp  test_prettyPrint.cpp
src/tokenizer/: test_tokenizer.cpp  tokenizer.cpp  tokenizer.hpp
src/typeChecker/: test_typeChecker.cpp  typeChecker.cpp  typeChecker.hpp
